# -DEPRECATED-Project-CopperHead

./: CNAME  README.md  clock.py  copperhead.py  example.py  index.md  integration.sh  setup.py
SnakeSkin/: app.py
examples/: example.py
package/: README.md  pyproject.toml  setup.cfg
package/src/CopperUI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/src/copperUI/: __init__.py  __main__.py  copperhead.py  errors.py  info.py
