[metadata]
name = CopperUI
version = 2.6.0
author = Morgan Metz
author_email = mlmi4@k12albemarle.org
description = a TUI helper package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Morgandri1/Project-Copperhead
project_urls =
    Bug Tracker = https://github.com/Morgandri1/Project-Copperhead/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src